@@ -2,8 +2,11 @@ package dev.luanfernandes.lucene.controller;
 
 import static dev.luanfernandes.lucene.util.DateUtils.toDate;
 import static dev.luanfernandes.lucene.util.DateUtils.toLocalDate;
+
+import dev.luanfernandes.lucene.exceptions.NotFoundException;
 import dev.luanfernandes.lucene.model.ShoppingList;
 
+import jakarta.enterprise.context.ApplicationScoped;
 import org.apache.lucene.document.DateTools;
 import org.apache.lucene.document.Document;
 import org.apache.lucene.index.DirectoryReader;
@@ -13,7 +16,7 @@ import org.apache.lucene.index.Term;
 import org.apache.lucene.search.*;
 import org.apache.lucene.store.Directory;
 import org.apache.lucene.util.BytesRef;
-import javax.enterprise.context.ApplicationScoped;
+
 import java.io.IOException;
 import java.text.ParseException;
 import java.time.LocalDate;
@@ -26,58 +29,51 @@ import java.util.stream.Collectors;
 public class LuceneSearcher {
     public List<ShoppingList> findAll(Directory index) throws IOException {
         Query query = new MatchAllDocsQuery();
-        List<Document> documents = executeQuery(index, query, Integer.MAX_VALUE);
+        List<Document> documents = executeQuery(index, query);
         return documents.stream().map(this::toShoppingList).collect(Collectors.toList());
     }
 
     public List<ShoppingList> findByPersonName(Directory index, String personName) throws IOException {
         Query query = new TermQuery(new Term(DocumentFields.NAME_FIELD, personName));
-        List<Document> documents = executeQuery(index, query, Integer.MAX_VALUE);
+        List<Document> documents = executeQuery(index, query);
         return documents.stream().map(this::toShoppingList).collect(Collectors.toList());
     }
 
     public List<ShoppingList> findByItem(Directory index, String item) throws IOException {
         Query query = new TermQuery(new Term(DocumentFields.ITEM_FIELD, item));
-        List<Document> documents = executeQuery(index, query, Integer.MAX_VALUE);
+        List<Document> documents = executeQuery(index, query);
         return documents.stream().map(this::toShoppingList).collect(Collectors.toList());
     }
 
     public List<ShoppingList> findByDateRange(Directory index, LocalDate lowerValue, LocalDate upperValue) throws IOException {
-
         String lowerValueAsString = DateTools.dateToString(toDate(lowerValue), DateTools.Resolution.DAY);
         String upperValueAsString = DateTools.dateToString(toDate(upperValue), DateTools.Resolution.DAY);
-
-        Query query = new TermRangeQuery(DocumentFields.DATE_FIELD, new BytesRef(lowerValueAsString), new BytesRef(upperValueAsString), true, true);
-        List<Document> documents = executeQuery(index, query, Integer.MAX_VALUE);
+        Query query = new TermRangeQuery(DocumentFields.DATE_FIELD, new BytesRef(lowerValueAsString),
+                new BytesRef(upperValueAsString), true, true);
+        List<Document> documents = executeQuery(index, query);
         return documents.stream().map(this::toShoppingList).collect(Collectors.toList());
     }
 
-    private List<Document> executeQuery(Directory index, Query query, Integer maxResults) throws IOException {
-
+    private List<Document> executeQuery(Directory index, Query query) throws IOException {
         Sort sort = new Sort(new SortField(DocumentFields.NAME_FIELD, SortField.Type.STRING));
-
         IndexReader reader = DirectoryReader.open(index);
         IndexSearcher searcher = new IndexSearcher(reader);
-        TopDocs topDocs = searcher.search(query, maxResults, sort);
-
+        TopDocs topDocs = searcher.search(query, Integer.MAX_VALUE, sort);
         return Arrays.stream(topDocs.scoreDocs)
-                .map(scoreDoc -> toDocument(scoreDoc, searcher))
-                .collect(Collectors.toList());
+                .map(scoreDoc -> toDocument(scoreDoc, searcher)).toList();
     }
 
     private Document toDocument(ScoreDoc scoreDoc, IndexSearcher searcher) {
         try {
             return searcher.doc(scoreDoc.doc);
         } catch (IOException e) {
-            throw new RuntimeException(e);
+            throw new NotFoundException("document not found");
         }
     }
 
     private ShoppingList toShoppingList(Document document) {
-
         ShoppingList shoppingList = new ShoppingList();
         shoppingList.setName(document.get(DocumentFields.NAME_FIELD));
-
         try {
             Date date = DateTools.stringToDate(document.get(DocumentFields.DATE_FIELD));
             LocalDate localDate = toLocalDate(date);
@@ -85,11 +81,9 @@ public class LuceneSearcher {
         } catch (ParseException e) {
             e.printStackTrace();
         }
-
         shoppingList.setItems(Arrays.stream(document.getFields(DocumentFields.ITEM_FIELD))
                 .map(IndexableField::stringValue).collect(Collectors.toList()));
         shoppingList.setFileName(document.get(DocumentFields.FILE_NAME_FIELD));
-
         return shoppingList;
     }
 }
